--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
   <header id="logo"></header>
 <div id="container">
-
+  <div id = "clockDisplay" class = "clockStyle"> </div>
   <ul id="genres"></ul>
   <ul id ="programmes"></ul>
 </div>
@@ -16,6 +16,7 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="schedule.js"></script>
+<script src="clock.js"></script>
  </body>
 </html>
 
