added css and js folders

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <title>title</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
  </head>
  <body>
   <header id="logo"></header>
@@ -15,8 +15,8 @@
 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="schedule.js"></script>
-<script src="clock.js"></script>
+<script src="js/schedule.js"></script>
+<script src="js/clock.js"></script>
  </body>
 </html>
 
